Update and rename facebook.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="Stylesheet" href="style1.css" type="text/css">
+    <link rel="Stylesheet" href="style.css" type="text/css">
 </head>
 <body>
     
  <div class="div0" >
     <div class="div1">
-    <img src="facebooklogo.png" width="180px" height="100px" >
+    <img src="./assets/images/facebooklogo.png" width="180px" height="100px" >
     </div>
     
     <div class="div2">
